--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --watch server.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^6.5.0",
-    "express": "^4.21.2"
+    "@prisma/client": "^6.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "mongodb": "^6.15.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "prisma": "^6.5.0"
+    "prisma": "^6.6.0"
   }
 }
